<resources>
    <string name="app_name">Runner</string>
    <string name="title_activity_main">Runner</string>
    <string name="title_activity_runs">My Runs</string>

    <!-- Navigation Drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_runs">My Runs</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_weekly_goals">Weekly Goals</string>
    <string name="nav_help">Help</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>

    <!-- MainActivity -->
    <string name="error_location_permission_not_granted">You need to allow location tracking in order to track a run</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="error_no_movement">No movement was detected</string>
    <string name="run_duration_label">Duration:</string>
    <string name="run_distance_label">Distance:</string>
    <string name="run_average_speed_label">Average speed:</string>
    <string name="metres">%s m</string>
    <string name="yards">%s yds</string>
    <string name="kilometres">%.3f km</string>
    <string name="miles">%.3f mi</string>
    <string name="kilometres_per_hour">%.1f km/h</string>
    <string name="miles_per_hour">%.1f mph</string>
    <string name="run_summary">Run summary</string>
    <string name="save_run_confirmation">Would you like to save this run?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="run_not_saved">Run not saved</string>
    <string name="run_saved">Run saved successfully</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="leave_page_while_running_confirmation">You are currently on a run, if you leave this page now your information about this run will be lost. Do you want to leave this page?</string>
    <string name="action_cancelled">Action cancelled</string>
    <string name="back_pressed_during_run_confirmation">Press back again to leave the app. Note, if you leave before saving your run, your run information will be lost</string>
    <string name="start_running">Picking up your location&#8230; Start running now, your route will automatically be tracked</string>
    <string name="error_no_location_provider">Please ensure that you have location tracking on your device turned on</string>

    <!-- RunsActivity -->
    <string name="run_date">Date: %s</string>
    <string name="run_duration">Duration: %s</string>
    <string name="run_distance">Distance: %s</string>
    <string name="run_average_speed">Average speed: %s</string>
    <string name="no_runs_completed">No runs have been completed yet. You can start a run from the home page&#8230;</string>
    <string name="iv_run_route_content_description">Displays an image of the route the user took for their run</string>

    <!-- RunDetailFragment -->
    <string name="share">Share</string>
    <string name="share_run_introduction">I\'ve just finished a run using Runner! Here it is:\n\n</string>
    <string name="error_null_bitmap">Please wait for the image to load before sharing the run</string>
    <string name="error_storage_permission_not_granted">You need to allow the storage permission in order to share a run</string>
    <string name="title_activity_statistics">Statistics</string>

    <!-- StatisticsActivity -->
    <string name="statistics_total_number_of_runs_label">Total number of runs:</string>
    <string name="statistics_total_time_spent_running_label">Total time spent running:</string>
    <string name="statistics_average_run_duration_label">Average run duration:</string>
    <string name="statistics_total_distance_travelled_label">Total distance travelled:</string>
    <string name="statistics_average_distance_travelled_label">Average distance per run:</string>
    <string name="statistics_average_speed_label">Average speed:</string>

    <!-- WeeklyGoalsActivity -->
    <string name="title_activity_weekly_goals">Weekly Goals</string>
    <string name="save">Save</string>
    <string name="distance_travelled_km">Distance travelled (km):</string>
    <string name="distance_travelled_mi">Distance travelled (mi):</string>
    <string name="time_spent_running">Time spent running (mins):</string>
    <string name="average_speed_kmh">Average speed (km/h):</string>
    <string name="average_speed_mph">Average speed (mph):</string>
    <string name="consecutive_targets_met">Consecutive targets met: %d</string>
    <string name="date_of_last_met_target">Date of last met target: %s</string>
    <string name="error_no_weekly_targets_fetched">An error occurred while fetching your targets, please try again</string>
    <string name="error_no_duration_target">Please set a time target</string>
    <string name="error_no_distance_target">Please set a distance target</string>
    <string name="error_no_average_speed_target">Please set an average speed target</string>
    <string name="targets_successfully_updated">Targets successfully updated</string>
    <string name="distance_target_progress">%.3f/%.3f</string>
    <string name="duration_target_progress">%d/%d</string>
    <string name="average_speed_target_progress">%.1f/%.1f</string>
    <string name="target_three_decimal_places">%.3f</string>
    <string name="target_one_decimal_place">%.1f</string>
    <string name="target">Target</string>
    <string name="n_a">N/A</string>

    <!-- WeeklyGoalsWidget -->
    <string name="widget_signed_out">You are signed out, please sign in to view your targets</string>
    <string name="widget_fetching_targets">Fetching targets&#8230;</string>

    <!-- WeeklyGoalsService -->
    <string name="notification_met_target_title">You met your target!</string>
    <plurals name="notification_met_target">
        <item quantity="one">Congratulations, you met your target for last week! You have now met your target for %d week in a row</item>
        <item quantity="other">Congratulations, you met your target for last week! You have now met your target for %d weeks in a row</item>
    </plurals>
    <string name="notification_channel">Main</string>

    <!-- SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="preferred_distance_unit">Preferred distance unit</string>
    <string name="preferred_distance_unit_key" translatable="false">preferred_unit_key</string>
    <string name="unit_kilometres_key" translatable="false">unit_kilometres</string>
    <string name="unit_miles_key" translatable="false">unit_miles</string>
    <string name="unit_kilometres">Kilometres</string>
    <string name="unit_miles">Miles</string>
    <string name="settings_updated">Your settings have been updated</string>

    <!-- HelpActivity -->
    <string name="title_activity_help">Help</string>
    <string name="help_text">This app allows you to track your runs and view statistics about your runs.
        \n\nTo begin a run, go to the Home page and click on the run button. You can then start running and the app will automatically track your route and statistics about your run. Once you are finished, click on the stop button and the app will ask you if you\'d like to save your run. If you click on yes, the app will save your run. If you click on no, your run information will be deleted.
        \n\nOnce you have taken at least one run, all your runs will be available on the My Runs page. You can scroll through and click on any of them to view the run in full screen. From there, you can share the run with your friends by clicking on the share button at the top right of the screen.
        \n\nTo view statistics about all your runs combined, go to the Statistics page. This page will give you various statistics about your runs, and will assist you with determining any progress you make.
        \n\nYou can also set weekly targets for yourself on the Weekly Goals page. You will be able to set a target for total distance, total duration and average speed. You have until the end of Sunday each week to meet your targets. The app will automatically check if you met your week\'s targets on Monday morning, and will keep track of the last date that you met your target, as well as how many targets you have met in a row. You can change your targets for the current week at any time (make sure to click on the save icon at the top right of the screen to save your changes).
        \n\nThe app includes a Widget that will display either your progress towards your weekly targets, or the number of targets you have met in a row and the last date that you met your target (you can change between these two views by adjusting the height of your Widget).
        \n\nIf you\'d like to change the unit that distances and speeds are displayed in (kilometres or miles), go to the Settings page and choose your preferred unit there. The app will then display all of your statistics using your preferred unit.
    </string>

    <!-- Network -->
    <string name="error_no_internet_connection">Your device is not connected to the Internet, please connect to the Internet</string>
</resources>