<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/action_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_runs"
            android:icon="@drawable/ic_baseline_directions_run_24px"
            android:title="@string/nav_runs" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_weekly_goals"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/nav_weekly_goals" />
    </group>
    <group
        android:id="@+id/other_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
