<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatisticsActivity"
    tools:showIn="@layout/app_bar_statistics">
    <ScrollView
        android:id="@+id/sv_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/statistics_total_number_of_runs_label"/>

            <TextView
                android:id="@+id/tv_total_number_of_runs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/statistics_total_time_spent_running_label"/>

            <TextView
                android:id="@+id/tv_total_time_spent_running"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/statistics_average_run_duration_label"/>

            <TextView
                android:id="@+id/tv_average_run_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/statistics_total_distance_travelled_label"/>

            <TextView
                android:id="@+id/tv_total_distance_travelled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/statistics_average_distance_travelled_label"/>

            <TextView
                android:id="@+id/tv_average_distance_travelled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StatisticsCaptionStyle"
                android:text="@string/run_average_speed_label"/>

            <TextView
                android:id="@+id/tv_average_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RunStatisticsStyle"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_runs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_no_runs_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_runs_completed"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>