<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@+id/cl_run_summary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_popup_run_duration_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/run_information_padding"
        android:paddingEnd="@dimen/run_information_padding"
        android:paddingTop="@dimen/run_information_padding"
        android:textAlignment="center"
        android:text="@string/run_duration_label" />

    <TextView
        android:id="@+id/tv_popup_run_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RunInformationStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_run_duration_label"
        android:padding="@dimen/run_information_padding"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_popup_run_distance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_run_duration"
        android:paddingStart="@dimen/run_information_padding"
        android:paddingEnd="@dimen/run_information_padding"
        android:paddingTop="@dimen/run_information_padding"
        android:textAlignment="center"
        android:text="@string/run_distance_label" />

    <TextView
        android:id="@+id/tv_popup_run_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RunInformationStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_run_distance_label"
        android:padding="@dimen/run_information_padding"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_popup_average_speed_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_run_distance"
        android:paddingStart="@dimen/run_information_padding"
        android:paddingEnd="@dimen/run_information_padding"
        android:paddingTop="@dimen/run_information_padding"
        android:textAlignment="center"
        android:text="@string/run_average_speed_label" />

    <TextView
        android:id="@+id/tv_popup_run_average_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RunInformationStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_average_speed_label"
        android:padding="@dimen/run_information_padding"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_popup_save_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/save_run_confirmation"
        app:layout_constraintTop_toBottomOf="@id/tv_popup_run_average_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>