<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RunDetailFragment">

    <ImageView
        android:id="@+id/iv_run_route"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cl_run_information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iv_run_route_content_description"
        android:scaleType="centerInside"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_run_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_run_duration_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center"
            android:text="@string/run_duration_label" />

        <TextView
            android:id="@+id/tv_run_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/RunInformationStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_run_duration_label"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <TextView
            android:id="@+id/tv_run_distance_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toRightOf="@+id/guideline_left"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center"
            android:text="@string/run_distance_label" />

        <TextView
            android:id="@+id/tv_run_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/RunInformationStyle"
            app:layout_constraintLeft_toRightOf="@+id/guideline_left"
            app:layout_constraintRight_toLeftOf="@+id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/tv_run_distance_label"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.67" />

        <TextView
            android:id="@+id/tv_average_speed_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintLeft_toRightOf="@+id/guideline_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center"
            android:text="@string/run_average_speed_label" />

        <TextView
            android:id="@+id/tv_run_average_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/RunInformationStyle"
            app:layout_constraintLeft_toRightOf="@+id/guideline_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_average_speed_label"
            android:padding="@dimen/run_information_padding"
            android:textAlignment="center" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>